# clobber

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  llvm_build.sh  vcpkg.json
bootstrap/: bootstrap.py  llvm_utils.py  utils.py
clobber-cli/: CMakeLists.txt
clobber-cli/include/clobber/cli/: actions.hpp  args.hpp
clobber-cli/src/: args.cpp  main.cpp
clobber-cli/src/actions/: build_run.cpp  new.cpp
clobber-cli/unittest/: CMakeLists.txt  args_parsing_tests.cpp
clobber/backend-mlir/: CMakeLists.txt
clobber/backend-mlir/include/: emitter.hpp
clobber/backend-mlir/include/clobber/mlir-backend/: emit_error.hpp  emitter.hpp  lowering.hpp  pch.hpp  tosa_emitter.hpp
clobber/backend-mlir/lib/: emit_error.cpp  emitter.cpp  lowering.cpp  native.cpp  tosa_emitter.cpp
clobber/backend-mlir/unittest/: CMakeLists.txt  emitter_tests.cpp
clobber/backend-mlir/unittest/test_files/dialects/llvm/: 0.mlir  1.mlir  2.mlir  3.mlir  4.mlir  5.mlir  6.mlir  7.mlir
clobber/backend-mlir/unittest/test_files/dialects/tosa/: 0.mlir  1.mlir  10.mlir  11.mlir  12.mlir  2.mlir  3.mlir  4.mlir  5.mlir  6.mlir  7.mlir  8.mlir  9.mlir  sample_0.mlir
clobber/cli/: CMakeLists.txt  main.cpp
clobber/common/: CMakeLists.txt
clobber/common/include/clobber/common/: debug.hpp  diagnostic.hpp  pch.hpp  utils.hpp  variant.hpp
clobber/common/lib/: diagnostic.cpp  utils.cpp
clobber/frontend/: CMakeLists.txt
clobber/frontend/include/clobber/: ast.hpp  parser.hpp  pch.hpp  semantics.hpp
clobber/frontend/include/clobber/ast/: ast.hpp  ast_accel.hpp  ast_core.hpp  ast_macros.hpp  ast_traversal.hpp
clobber/frontend/lib/: CMakeLists.txt  ast.cpp  base_parser_error.cpp  parser.cpp  semantics.cpp  tokenizer.cpp
clobber/frontend/lib/ast/: ast_accel.cpp  ast_core.cpp  ast_macros.cpp  ast_span.cpp  ast_traversal.cpp
clobber/frontend/lib/clobber/internal/: diagnostic_factory.cpp  diagnostic_factory.hpp  parser_error_factory.cpp  parser_error_factory.hpp  parser_errors.hpp  utils.hpp
clobber/frontend/lib/semantics/: semantics.cpp  semantics_impl.hpp  semantics_types.hpp
clobber/frontend/unittest/: CMakeLists.txt  parser_tests.cpp  semantics_tests.cpp  test_cases.cpp  test_cases.hpp  tokenizer_test_cases.hpp  tokenizer_tests.cpp
clobber/frontend/unittest/helpers/: expr_tostring.cpp  expr_tostring.hpp  helpers.cpp  helpers.hpp  logging_helper.hpp  pch.hpp  syntax_factory.cpp  syntax_factory.hpp  tostring.cpp  tostring.hpp  type_tostring.cpp  type_tostring.hpp
clobber/frontend/unittest/test_files/: 0.clj  1.clj  2.clj  2_1.clj  3.clj  4.clj  5.clj
docs/: 0-building.md
src/: main.cpp  parser.cpp
tests/: CMakeLists.txt  main.cpp
tests/standalone_files/: 1.clj  4.clj  5.clj
